1.1  ---
New Features:

Bug Fixes:
 - Cancel button on 'New Map' dialog box now works
 
Performance Improvements:
 - Zooming, scrolling, and drawing hexes are all much faster

1.0b2 May 31, 2003
New Features:
- Added 'Inspector' palette which shows various information about whatever hex is currently under the mouse

Bug Fixes:
- Fixed bug that allowed palettes to show up on startup regardless of 'show/hide' preference


1.0b1 Jan 23, 2003
- Initial version